<resources>
    <!--앱 설정 : 계산기-->
    <string name="app_name">계산기</string>


    <!--계산기 버튼-->
    <!--부호-->
    <string name="button_cancel">C</string>
    <string name="button_parenthesis">( )</string>
    <string name="button_percent">%</string>
    <string name="button_divide">÷</string>
    <string name="button_multiply">×</string>
    <string name="button_minus">−</string>
    <string name="button_plus">+</string>
    <string name="button_equal">=</string>
    <string name="button_dot">.</string>
    <string name="button_plus_minus">+/-</string>

    <!--숫자-->
    <string name="button_zero">0</string>
    <string name="button_nine">9</string>
    <string name="button_eight">8</string>
    <string name="button_seven">7</string>
    <string name="button_six">6</string>
    <string name="button_five">5</string>
    <string name="button_four">4</string>
    <string name="button_three">3</string>
    <string name="button_two">2</string>
    <string name="button_one">1</string>
    <string name="button_return">되돌리기</string>

    <!--공통 라인-->
    <string name="text_dummy">image</string>


</resources>