<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/number_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="end|center"
        android:layout_marginVertical="120dp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/imageLine1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageLine1"
        style="@style/lineHorizentalStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_edittext"
        app:layout_constraintBottom_toTopOf="@+id/button_parenthesis"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@mipmap/ic_cancel_button_round"
        app:layout_constraintBottom_toTopOf="@+id/imageLine1"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_parenthesis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLine1"
        app:layout_constraintBottom_toTopOf="@id/button_seven"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_parenthesis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_parenthesis"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_percent"
        app:layout_constraintStart_toEndOf="@+id/button_cancel"
        app:layout_constraintTop_toBottomOf="@+id/imageLine1"
        app:layout_constraintBottom_toTopOf="@+id/button_eight"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_percent"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintStart_toEndOf="@+id/button_parenthesis"
        app:layout_constraintTop_toBottomOf="@+id/imageLine1"
        app:layout_constraintBottom_toTopOf="@+id/button_nine"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_divide"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_percent"
        app:layout_constraintTop_toBottomOf="@+id/imageLine1"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_seven"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cancel"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_eight"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        app:layout_constraintTop_toBottomOf="@+id/button_parenthesis"
        app:layout_constraintBottom_toTopOf="@+id/button_five"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_nine"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintStart_toEndOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/button_percent"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_nine"
        app:layout_constraintTop_toBottomOf="@+id/button_divide"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_four"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_seven"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_five"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toBottomOf="@+id/button_eight"
        app:layout_constraintBottom_toTopOf="@+id/button_two"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_six"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/button_nine"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_minus"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_six"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_one"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four"
        app:layout_constraintBottom_toTopOf="@+id/button_return"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_two"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toBottomOf="@+id/button_five"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_three"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_two"
        app:layout_constraintTop_toBottomOf="@+id/button_six"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_plus"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_three"
        app:layout_constraintTop_toBottomOf="@+id/button_minus"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_one"
        app:layout_constraintBottom_toBottomOf="parent"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_zero"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintStart_toEndOf="@+id/button_return"
        app:layout_constraintTop_toBottomOf="@+id/button_two"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_dot"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button_zero"
        app:layout_constraintTop_toBottomOf="@+id/button_three"
        app:layout_constraintBottom_toBottomOf="parent"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_equal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>