<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/number_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="90dp"
        android:background="@null"
        android:focusable="false"
        android:gravity="end|center"
        android:inputType="textMultiLine"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageLine1"
        style="@style/lineHorizentalStyle"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button_parenthesis"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_cancel_button"
        app:layout_constraintBottom_toTopOf="@+id/imageLine1"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_cancel"
        android:textColor="#ffff0000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_seven"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_parenthesis"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_parenthesis"
        style="@style/shape_button_circle_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_parenthesis"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_eight"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_percent"
        app:layout_constraintStart_toEndOf="@+id/button_cancel"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_percent"
        style="@style/shape_button_circle_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_percent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_nine"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintStart_toEndOf="@+id/button_parenthesis"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_divide"
        style="@style/shape_button_circle_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_divide"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_percent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_seven"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_eight"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_five"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_nine"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintStart_toEndOf="@+id/button_eight"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_multiply"
        style="@style/shape_button_circle_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_multiply"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_nine"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_four"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_five"

        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_five"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_two"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_six"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_five"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_minus"
        style="@style/shape_button_circle_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_six"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_one"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_return"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_two"

        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_two"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_three"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_two"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus"
        style="@style/shape_button_circle_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_plus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_three"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_return"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_plus_minus"
        android:textColor="@drawable/selector_black_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_zero"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_zero"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintStart_toEndOf="@+id/button_return"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_shape_button_circle"
        android:maxWidth="48dp"
        android:text="@string/button_dot"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button_zero"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/selector_green_background"
        android:maxWidth="48dp"
        android:text="@string/button_equal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        />


</androidx.constraintlayout.widget.ConstraintLayout>